refactor: streamline GameService structure and improve method clarity